--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 	
 					<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>GRASP</strong> @ Ontario Tech University</a>
+						<a href="index.html" class="logo"><strong>GRASP</strong> General Robotics and Autonomous Systems and Processes</a>
 					</header>
 							<!-- Banner -->
 								<header class="main">
-									<h1>Welcome</h1>
-									<p>@ Ontario Tech University, Oshawa, ON, Canada</p>
+									<h1>GRASP Automation</h1>
+									<p>@ Toronto, ON, Canada</p>
 								</header>
 								<span class="image right">
 									<img src="images/banner.png" alt="" />
