--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>GRASP@OntarioTech</title>
+		<title>GRASP Automation</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type="image/png" href="images/ico.png" sizes="32x32">
-		<link rel="shortcut icon" type="image/png" href="images/logo.png">
+		<link rel="icon" type="image/png" href="images/logo.ico" sizes="32x32">
+		<link rel="shortcut icon" type="image/png" href="images/logo.ico">
 	</head>
 	<body class="is-preload">
 	
