--- a/index.html
+++ b/index.html
@@ -57,19 +57,12 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="people.html">People</a></li>
-										<li><a href="research.html">Research</a></li>
-										<li><a href="publications.html">Publiucations</a></li>
-										<li><a href="courses.html">Courses</a></li>
-										<li>
-											<span class="opener">Lab Resoures</span>
-											<ul>
-												<li><a href="facilities.html">Facilities</a></li>
-												<li><a href="demos.html">Lab Demos</a></li>
-												<li><a href="training.html">Training</a></li>
-												<li><a href="forms.html">Forms and Documents</a></li>
-												<li><a href="sponsors.html">Sponsors and Partners</a></li>
-											</ul>
+										<li><a href="people.html">Sanitizing Products</a></li>
+										<li><a href="research.html">Collabrative Robotic Arms</a></li>
+										<li><a href="publications.html">Parallel Robots</a></li>
+										<li><a href="publications.html">Medical Systems and Devices</a></li>
+										<li><a href="courses.html">Businnes Cases</a></li>
+										
 									</ul>
 								</nav>
 
@@ -80,7 +73,7 @@
 									</header>
 									<p><h3>Lab Location: </h3><a href="https://goo.gl/maps/F2PiJsYKswSfEUGM7">Software and Informatics Research Centre</a> (SIRC 3310)</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">grasp@list.uoit.ca</a></li>
+										<li class="icon solid fa-envelope"><a href="#">info@graspautomation.com</a></li>
 										<li class="icon solid fa-phone">+1 (905) 721-8668</li>
 										<li class="icon solid fa-home">40 Conlin Road<br />
 										Oshawa, ON L1G 0C5</li>
