--- a/index.html
+++ b/index.html
@@ -58,11 +58,8 @@
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="people.html">Sanitizing Products</a></li>
-										<li><a href="research.html">Collabrative Robotic Arms</a></li>
-										<li><a href="publications.html">Parallel Robots</a></li>
-										<li><a href="publications.html">Medical Systems and Devices</a></li>
-										<li><a href="courses.html">Businnes Cases</a></li>
-										
+										<li><a href="research.html">Robotic Systems and Devices</a></li>
+										<li><a href="publications.html">Medical Systems and Devices</a></li>	
 									</ul>
 								</nav>
 
