--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
 								<span class="image left">
 									<img src="images/logo.png" alt="" />
 								</span>
-								<p>Welcome to the General Robotics & Autonomous Systems and Processes (GRASP) Laboratory of the Department of Automotive, Mechanical and Manufacturing Engineering, at <a href="https://www.ontariotechu.ca">the Ontario Tech University</a>. The GRASP Laboratory was founded in 2015, under the directorship of Prof. Haoxiang Lang.</p> 
-								<p>The main goal of the GRASP Laboratory is the design, development and application of advanced
-								technologies for autonomous systems and processes, with emphasis on mechatronics, robotics, machine vision, control and artificial intelligence. GRASP Lab carry out research in the following areas: </p>
+								<p>GRASP Automation Ltd. was founded in 2017. The main goal of the GRASP Laboratory is the design, development and application of advanced
+								technologies for autonomous systems and processes, with emphasis on Sanitizing (UVC) Products, Robotic and Medical Systems and Devices. </p>
 
 
 								<div class="row">
@@ -66,14 +65,14 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Get in touch</h2>
+										<h2>Contact Information</h2>
 									</header>
-									<p><h3>Lab Location: </h3><a href="https://goo.gl/maps/F2PiJsYKswSfEUGM7">Software and Informatics Research Centre</a> (SIRC 3310)</p>
 									<ul class="contact">
+										<li class="icon solid fa-home">Unit 101, 40 Conlin Road<br />
+											Oshawa, ON L1G 0C5</li>
 										<li class="icon solid fa-envelope"><a href="#">info@graspautomation.com</a></li>
 										<li class="icon solid fa-phone">+1 (905) 721-8668</li>
-										<li class="icon solid fa-home">40 Conlin Road<br />
-										Oshawa, ON L1G 0C5</li>
+										
 									</ul>
 								</section>
 								</div>
