--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 	
 					<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>GRASP</strong> General Robotics and Autonomous Systems and Processes</a>
+						<a href="index.html" class="logo"><strong>G</strong>eneral <strong>R</strong>obotics & <strong>A</strong>utonomous <strong>S</strong>ystems and <strong>P</strong>rocesses</a>
 					</header>
 							<!-- Banner -->
 								<header class="main">
 									<h1>GRASP Automation</h1>
-									<p>@ Toronto, ON, Canada</p>
+									<p>@Toronto, ON, Canada</p>
 								</header>
 								<span class="image left">
 									<img src="images/logo.png" alt="" />
@@ -56,9 +56,10 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="people.html">Sanitizing Products</a></li>
-										<li><a href="research.html">Robotic Systems and Devices</a></li>
-										<li><a href="publications.html">Medical Systems and Devices</a></li>	
+										<li><a href="index.html">Products</a></li>
+										<li><a href="index.html">Service</a></li>
+										<li><a href="index.html">Customer Stories</a></li>
+										<li><a href="index.html">Company</a></li>
 									</ul>
 								</nav>
 
@@ -84,6 +85,5 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
