--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 								<span class="image left">
 									<img src="images/logo.png" alt="" />
 								</span>
-								<p>GRASP Automation Ltd. was founded in 2017. The main goal of the GRASP is the design, development, consulting of advanced
+								<p>GRASP Automation Ltd. was founded in 2017. The main goal of the GRASP is the design, development and consulting of advanced
 								technologies for autonomous systems and processes, with emphasis on Robotic and Medical Systems and Devices. </p>
 								<div class="row">
 									<div class="col-6 col-12-small">
