--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
 					<header id="header">
 						<a href="index.html" class="logo"><strong>G</strong>eneral <strong>R</strong>obotics & <strong>A</strong>utonomous <strong>S</strong>ystems and <strong>P</strong>rocesses</a>
 					</header>
+					<span class="image right">
+						<img src="images/logo.png" alt="" />
+					</span>
 							<!-- Banner -->
 								<header class="main">
 									<h1>GRASP Automation</h1>
 									<p>@Toronto, ON, Canada</p>
 								</header>
-								<span class="image left">
-									<img src="images/logo.png" alt="" />
-								</span>
+								
 								<p>GRASP Automation Ltd. was founded in 2017. The main goal of the GRASP is the design, development and consulting of advanced
 								technologies for autonomous systems and processes, with emphasis on Robotic and Medical Systems and Devices. </p>
 								<div class="row">
