--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									<ul class="contact">
 										<li class="icon solid fa-home">Unit 101, 40 Conlin Road<br />
 											Oshawa, ON L1G 0C5</li>
-										<li class="icon solid fa-envelope"><a href="#">info@graspautomation.com</a></li>
+										<li class="icon solid fa-envelope"><a href="#">haoxiang.lang@graspautomation.com</a></li>
 										<li class="icon solid fa-phone">+1 (905) 721-8668</li>
 										
 									</ul>
