--- a/index.html
+++ b/index.html
@@ -129,10 +129,6 @@
 		document.getElementById("mySidepanel").style.width = "0";
 	}
 </script>
-
-	<div class="logo">
-			<img src="./images/headerimages.jpg">
-	</div> 
 	
 	<div class= "navbar">
 		<div class="subnav">
@@ -163,10 +159,10 @@
 			</div>
 		</div>
 		<div class="subnav">
-			<button class="subnavbtn">Company 			  
+			<button class="subnavbtn">About 			  
 			</button>
 			<div class="subnav-content">
-			    <a href="./comingsoon.html">About</a>		  
+			    <a href="./comingsoon.html">Company</a>		  
 			</div>
 		</div>
 		
@@ -260,10 +256,10 @@
 
 <div class="content"> 
 	<h1>GRASP Automation</h1>
+	<p><b>G</b>eneral <b>R</b>obotics & <b>A</b>utonomous <b>S</b>ystems and <b>P</b>rocesses</p>
 	<p>@ Toronto, ON, Canada</p>
 	<p>GRASP Automation Ltd. was founded in 2017. The main goal of the GRASP is the design, development and consulting of advanced technologies for autonomous systems and processes, with emphasis on Robotic and Medical Systems and Devices.</p>
 
-	
 </div>	
 
 
