--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
 </script>	
 
 <div class="content"> 
+	<img src="images/logo.png" alt="logo" style="float:right; width:150px;">
 	<h1>GRASP Automation</h1>
 	<p><b>G</b>eneral <b>R</b>obotics & <b>A</b>utonomous <b>S</b>ystems and <b>P</b>rocesses</p>
 	<p>@ Toronto, ON, Canada</p>
