--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</div>
 		
 		<div class="sideloge">
-				<img src="./images/sidelogo.jpg">
+				<img src="./images/logo.png">
 		</div> 
 		
 		<button class="openbtn" onclick="openNav()">☰</button> 
@@ -182,7 +182,7 @@
 	<p><b>G</b>eneral <b>R</b>obotics & <b>A</b>utonomous <b>S</b>ystems and <b>P</b>rocesses</p>
 	<p>@ Toronto, ON, Canada</p>
 	<p>GRASP Automation Ltd. was founded in 2017. The main goal of the GRASP is the design, development and consulting of advanced technologies for autonomous systems and processes, with emphasis on Robotic and Medical Systems and Devices.</p>
-
+	
 </div>	
 
 
