--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>Start your journey with our practical courses</h1>
-                                             <h3>Our online courses are built in partnership with technology leaders and are designed to meet industry demands.</h3>
-                                             <a href="#courses" class="section-btn btn btn-default smoothScroll">Take a course</a>
+                                             <h1>Our products and Service</h1>
+                                             <h3>Check our past projects </h3>
+                                             <a href="#products" class="section-btn btn btn-default smoothScroll">Explore</a>
                                         </div>
                                    </div>
                               </div>
@@ -95,8 +95,8 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>Efficient Learning Methods</h1>
-                                             <h3>Nam eget sapien vel nibh euismod vulputate in vel nibh. Quisque eu ex eu urna venenatis sollicitudin ut at libero. Visit <a rel="nofollow" href="https://www.facebook.com/templatemo">templatemo</a> page.</h3>
+                                             <h1>Customer Stories and Partnership</h1>
+                                             <h3><a rel="nofollow" href="https://www.facebook.com/templatemo">templatemo</a> page.</h3>
                                              <a href="#contact" class="section-btn btn btn-default smoothScroll">Let's chat</a>
                                         </div>
                                    </div>
@@ -111,8 +111,7 @@
      <section id="feature">
           <div class="container">
                <div class="row">
-                    <h1>GRASP Automation Ltd. @ Toronto, ON, Canada</h1>
-                    <h2>Founded in 2017. The main goal of the GRASP is the design, development and consulting of advanced technologies for autonomous systems and processes, with emphasis on Robotic and Mechatronic systems and devices.</h2>
+                    <h1>GRASP Automation Ltd. <small>was founded in 2017. The main goal of the GRASP is the design, development and consulting of advanced technologies for autonomous systems and processes, with emphasis on Robotic and Mechatronic systems and devices.</small></h1>
                     <div class="col-md-4 col-sm-4">
                          <div class="feature-thumb">
                               <span>01</span>
@@ -149,7 +148,7 @@
 
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title">
-                              <h2>Products <small></small></h2>
+                              <h2>Products <small>in our Mechatronics and Robotics.</small></h2>
                          </div>
                     </div>
 
@@ -159,8 +158,8 @@
                                    <img src="images/author-image1.jpg" class="img-responsive" alt="">
                               </div>
                               <div class="team-info">
-                                   <h3>Mark Wilson</h3>
-                                   <span>I love Teaching</span>
+                                   <h3>Mobile Robotis</h3>
+                                   <span>Mobile Robotic Systems and Modulars</span>
                               </div>
                               
                          </div>
@@ -172,13 +171,9 @@
                                    <img src="images/author-image2.jpg" class="img-responsive" alt="">
                               </div>
                               <div class="team-info">
-                                   <h3>Catherine</h3>
-                                   <span>Education is the key!</span>
+                                   <h3>Parallel Robots</h3>
+                                   <span>High-speed and Accurate Parallel Robotic Manipulators</span>
                               </div>
-                              <ul class="social-icon">
-                                   <li><a href="#" class="fa fa-google"></a></li>
-                                   <li><a href="#" class="fa fa-instagram"></a></li>
-                              </ul>
                          </div>
                     </div>
 
@@ -188,14 +183,9 @@
                                    <img src="images/author-image3.jpg" class="img-responsive" alt="">
                               </div>
                               <div class="team-info">
-                                   <h3>Jessie Ca</h3>
-                                   <span>I like Online Courses</span>
+                                   <h3>Robotic Arm</h3>
+                                   <span>Industrial Manipulators and Collabrative Manipulators</span>
                               </div>
-                              <ul class="social-icon">
-                                   <li><a href="#" class="fa fa-twitter"></a></li>
-                                   <li><a href="#" class="fa fa-envelope-o"></a></li>
-                                   <li><a href="#" class="fa fa-linkedin"></a></li>
-                              </ul>
                          </div>
                     </div>
 
@@ -205,14 +195,9 @@
                                    <img src="images/author-image4.jpg" class="img-responsive" alt="">
                               </div>
                               <div class="team-info">
-                                   <h3>Andrew Berti</h3>
-                                   <span>Learning is fun</span>
+                                   <h3>Software</h3>
+                                   <span>Sensing, Perception, Localization, Navigation, Reasoing and Understanding</span>
                               </div>
-                              <ul class="social-icon">
-                                   <li><a href="#" class="fa fa-twitter"></a></li>
-                                   <li><a href="#" class="fa fa-google"></a></li>
-                                   <li><a href="#" class="fa fa-behance"></a></li>
-                              </ul>
                          </div>
                     </div>
 
@@ -229,7 +214,7 @@
 
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title">
-                              <h2>Service <small>Under Construction</small></h2>
+                              <h2>Service <small>consulation in Mechatronics Design and Robotics</small></h2>
                          </div>
                     </div>
 
