--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
                                              <h1>Customer Stories and Partnership</h1>
-                                             <h3><a rel="nofollow" href="https://www.facebook.com/templatemo">templatemo</a> page.</h3>
-                                             <a href="#contact" class="section-btn btn btn-default smoothScroll">Let's chat</a>
+                                             <a href="#customer" class="section-btn btn btn-default smoothScroll">Check</a>
                                         </div>
                                    </div>
                               </div>
@@ -226,7 +225,7 @@
 
 
      <!-- customer story -->
-     <section id="courses">
+     <section id="customer">
           <div class="container">
                <div class="row">
 
