--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>GRASP Automation @ Toronto, ON, Canada</h1>
-                                             <h3>General Robotics & Autonomous Systems and Processes</h3>
+                                             <h1>General Robotics & Autonomous Systems and Processes</h1>
+                                             <h3>@ Toronto, ON, Canada</h3>
                                              <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>
                                         </div>
                                    </div>
@@ -78,9 +78,9 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>Our products and Service</h1>
-                                             <h3>Check our past projects </h3>
-                                             <a href="#products" class="section-btn btn btn-default smoothScroll">Explore</a>
+                                             <h1>Products and Service</h1>
+                                             <h3>Check our products and service </h3>
+                                             <a href="#products" class="section-btn btn btn-default smoothScroll">Review</a>
                                         </div>
                                    </div>
                               </div>
@@ -90,8 +90,9 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>Customer Stories and Partnership</h1>
-                                             <a href="#customer" class="section-btn btn btn-default smoothScroll">Check</a>
+                                             <h1>Customer Stories</h1>
+                                             <h3>Check our previous projects and enginering cases.</h3>
+                                             <a href="#customer" class="section-btn btn btn-default smoothScroll">Explore</a>
                                         </div>
                                    </div>
                               </div>
