--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                               </div>
                               <address>
                                    <p>+1 (905)721-8668</p>
-                                   <p><a href="mailto:youremail.co">info@graspautomation.com</a></p>
+                                   <p><a href="mailto:info@graspautomation.com">info@graspautomation.com</a></p>
                               </address>
 
                               <div class="footer_menu">
