--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
      <section id="feature">
           <div class="container">
                <div class="row">
-                    <h1>GRASP Automation Ltd. <small>was founded in 2017. The main goal of the GRASP is the design, development and consulting of advanced technologies for autonomous systems and processes, with emphasis on Robotic and Mechatronic systems and devices.</small></h1>
+                    <h1>GRASP Automation Ltd. <small>was founded in 2017. The main goal is the design, development and consulting of advanced technologies for autonomous systems and processes, with emphasis on Robotic and Mechatronic systems and devices.</small></h1>
                     <div class="col-md-4 col-sm-4">
                          <div class="feature-thumb">
                               <span>01</span>
@@ -249,10 +249,6 @@
                               <address>
                                    <p>2000 Simcoe Street North,<br> Oshawa, ON L1G 0C5</p>
                               </address>
-                              <div class="copyright-text"> 
-                                   <p>Copyright &copy; 2017 GRASP Automation Ltd.</p>
-
-                              </div>
                          </div>
                     </div>
 
@@ -262,7 +258,8 @@
                                    <h2>Contact Info</h2>
                               </div>
                               <address>
-                                   <p>+1 (905)721-8668</p>
+                                   <!-- <p>+1 (905)721-8668</p> -->
+                                   
                                    <p><a href="mailto:info@graspautomation.com">info@graspautomation.com</a></p>
                               </address>
 
@@ -272,6 +269,14 @@
                          </div>
                     </div>
 
+                    <div class="col-md-4 col-sm-6">
+                         <div class="footer-info">
+                              <div class="copyright-text"> 
+                                   <p>Copyright &copy; 2017 GRASP Automation Ltd.</p>
+
+                              </div>
+                         </div>
+                    </div>
                     
                </div>
           </div>
