--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <div class="col-md-3 col-sm-6">
                          <div class="team-thumb">
                               <div class="team-image">
-                                   <img src="images/author-image1.jpg" class="img-responsive" alt="">
+                                   <img src="images/mobile robot.png" class="img-responsive" alt="">
                               </div>
                               <div class="team-info">
                                    <h3>Mobile Robotis</h3>
@@ -163,7 +163,7 @@
                     <div class="col-md-3 col-sm-6">
                          <div class="team-thumb">
                               <div class="team-image">
-                                   <img src="images/author-image2.jpg" class="img-responsive" alt="">
+                                   <img src="images/parallel.png" class="img-responsive" alt="">
                               </div>
                               <div class="team-info">
                                    <h3>Parallel Robots</h3>
@@ -175,7 +175,7 @@
                     <div class="col-md-3 col-sm-6">
                          <div class="team-thumb">
                               <div class="team-image">
-                                   <img src="images/author-image3.jpg" class="img-responsive" alt="">
+                                   <img src="images/robotic arm.png" class="img-responsive" alt="">
                               </div>
                               <div class="team-info">
                                    <h3>Robotic Arm</h3>
@@ -187,11 +187,11 @@
                     <div class="col-md-3 col-sm-6">
                          <div class="team-thumb">
                               <div class="team-image">
-                                   <img src="images/author-image4.jpg" class="img-responsive" alt="">
+                                   <img src="images/software.png" class="img-responsive" alt="">
                               </div>
                               <div class="team-info">
                                    <h3>Software</h3>
-                                   <span>Sensing, Perception, Localization, Navigation, Reasoing and Understanding</span>
+                                   <span>Sensing, Perception, Localization, Navigation, Reasoing and Motion Control</span>
                               </div>
                          </div>
                     </div>
