--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
      <!-- PRE LOADER -->
      <section class="preloader">
           <div class="spinner">
-
                <span class="spinner-rotate"></span>
-               
           </div>
      </section>
 
@@ -33,7 +31,6 @@
      <!-- MENU -->
      <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
           <div class="container">
-
                <div class="navbar-header">
                     <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                          <span class="icon icon-bar"></span>
@@ -42,7 +39,7 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <img src="images/logo.png" alt="logo" style="float:right; width:120px;">
+                    <img src="images/logo.png" alt="logo" style="float:left; width:120px;">
                </div>
 
                <!-- MENU LINKS -->
@@ -66,7 +63,7 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>General Robotics & Autonomous Systems and Processes</h1>
+                                             <h1>GRASP Automation Ltd.</h1>
                                              <h3>@ Toronto, ON, Canada</h3>
                                              <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>
                                         </div>
@@ -106,7 +103,6 @@
      <section id="feature">
           <div class="container">
                <div class="row">
-                    <h1>GRASP Automation Ltd. <small>was founded in 2017. The main goal is the design, development and consulting of advanced technologies for autonomous systems and processes, with emphasis on Robotic and Mechatronic systems and devices.</small></h1>
                     <div class="col-md-4 col-sm-4">
                          <div class="feature-thumb">
                               <span>01</span>
@@ -185,8 +181,7 @@
                     </div>
 
                     <div class="col-md-3 col-sm-6">
-                         <div class="team-thumb">
-                              <div class="team-image">
+                         <div class="team-thumb">                              <div class="team-image">
                                    <img src="images/software.png" class="img-responsive" alt="">
                               </div>
                               <div class="team-info">
