--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="icon" href="images/logo.ico">	
-     <title>GRASP Automation</title>
+     <title>RoboWise Engineering</title>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="">
