--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
      <!-- FEATURE -->
      <section id="feature">
           <div class="container">
+              
 			<h2>RoboWise Engineering Inc.<small> is an engineering consultation company in robotics. The company offer smart, informed, and insightful solutions and consultations related to robotics and its applications.</small></h2>
 		
                <div class="row">
@@ -188,7 +189,7 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-4">
 							 <div class="feature-thumb">
-									<img src="images/Ontario-Tech-University.png" class="img-responsive" alt="">
+									<img src="images/Logo.jpg" class="img-responsive" alt="">
 								  <h3>Robotic Applications</h3>
 								  <p>Multi-domain engineering design including Mehcanical, Electrical/Electronics and Computer Engineering.</p>
 							 </div>
