--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-4">
 							 <div class="feature-thumb">
-									<img src="images/Logo.jpg" class="img-responsive" alt="">
+									<img src="images/RoboWise.gif" class="img-responsive" alt="">
 								  <h3>Robotic Applications</h3>
 								  <p>Multi-domain engineering design including Mehcanical, Electrical/Electronics and Computer Engineering.</p>
 							 </div>
