--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="icon" href="images/logo.ico">	
-     <title>RoboWise Engineering</title>
+     <title>GRASP Automation</title>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="">
@@ -62,7 +62,7 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>RoboWise Engineering Inc.</h1>
+                                             <h1>GRASP Automation Ltd.</h1>
                                              <h3>The Future of Robotics: Innovative Solutions for Smart Engineering</h3>
                                              <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>
                                         </div>
@@ -78,7 +78,7 @@
      <section id="feature">
           <div class="container">
               
-			<h2>RoboWise Engineering Inc.<small> is an engineering consultation company in robotics. The company offer smart, informed, and insightful solutions and consultations related to robotics and its applications.</small></h2>
+			<h2>GRASP Automation Ltd.<small> is an engineering reserach and consultation company in robotics. The company offer smart, informed, and insightful solutions and consultations related to robotics and its applications.</small></h2>
 		
                <div class="row">
                     <div class="col-md-4 col-sm-4">
@@ -261,7 +261,7 @@
                                    <h2>Location</h2>
                               </div>
                               <address>
-                                   <p>65 West Beaver Creek Rd,<br> Richmond Hill, ON L4B 1K4 Canada</p>
+                                   <p>XXX,<br> Whitby, ON L4B 1K4 Canada</p>
                               </address>
                          </div>
                     </div>
@@ -272,9 +272,9 @@
                                    <h2>Contact Info</h2>
                               </div>
                               <address>
-                                   <p>Tel: +1 (905) 237-9750</p>
+                                   <p>Tel: +1 XXX XXX XXXX</p>
                                    
-                                   <p><a href="mailto:info@graspautomation.com">info@robowise.ca</a></p>
+                                   <p><a href="mailto:XXX@gmail.com">info@robowise.ca</a></p>
                               </address>
 
                               <div class="footer_menu">
@@ -286,7 +286,7 @@
                     <div class="col-md-4 col-sm-6">
                          <div class="footer-info">
                               <div class="copyright-text"> 
-                                   <p>Copyright &copy; 2023 RoboWise Engineering Inc.</p>
+                                   <p>Copyright &copy; 2023 GRASP Automation Ltd.</p>
 
                               </div>
                          </div>
