--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                               <address>
                                    <p>Tel: +1 XXX XXX XXXX</p>
                                    
-                                   <p><a href="mailto:XXX@gmail.com">info@robowise.ca</a></p>
+                                   <p><a href="mailto:XXX@gmail.com">info@graspautomation.ca</a></p>
                               </address>
 
                               <div class="footer_menu">
