--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         }
         .services {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             flex-wrap: wrap;
             margin: 20px 0;
         }
@@ -65,10 +65,9 @@
             margin: 10px;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-            flex: 1;
             text-align: center;
             box-sizing: border-box;
-            min-width: calc(25% - 40px);
+            width: calc(25% - 40px);
         }
         .service i {
             font-size: 3em;
@@ -84,12 +83,12 @@
         }
         @media (max-width: 768px) {
             .service {
-                flex: 1 1 calc(50% - 20px);
+                width: calc(50% - 20px);
             }
         }
         @media (max-width: 480px) {
             .service {
-                flex: 1 1 100%;
+                width: calc(100% - 20px);
             }
         }
     </style>
